--- a/QLTV/Views/Books/Index.cshtml
+++ b/QLTV/Views/Books/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model PagedList.IPagedList<QLTV.Models.Book>
+﻿@model QLTV.ViewModels.BookViewModel
 @using PagedList.Mvc
 
 @{
@@ -34,7 +34,7 @@
         <th></th>
     </tr>
 
-    @foreach (var item in Model)
+    @foreach (var item in Model.Books)
     {
         <tr>
             <td>
@@ -62,6 +62,6 @@
             </td>
         </tr>
     }
-
 </table>
-@Html.PagedListPager(Model, pageNumber => Url.Action("Index", new { pageNumber }))
+<p>Tổng số bản ghi: @Model.TotalRecord</p>
+@Html.PagedListPager(Model.Books, pageNumber => Url.Action("Index", new { pageNumber }))
