--- a/QLTV/Views/Login/Index.cshtml
+++ b/QLTV/Views/Login/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@{ 
+﻿@{
     Layout = null;
 }
 
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="~/Content/Css/adminlte.min.css">
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css" rel="stylesheet" />
 </head>
 <body class="hold-transition login-page">
     <div class="login-box">
@@ -32,39 +33,37 @@
             <div class="card-body login-card-body">
                 <p class="login-box-msg">Sign in to start your session</p>
 
-                <form action="../../index3.html" method="post">
-                    <div class="input-group mb-3">
-                        <input type="email" class="form-control" placeholder="Email">
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <span class="fas fa-envelope"></span>
-                            </div>
+                <div class="input-group mb-3">
+                    <input type="email" class="form-control" placeholder="Email">
+                    <div class="input-group-append">
+                        <div class="input-group-text">
+                            <span class="fas fa-envelope"></span>
                         </div>
                     </div>
-                    <div class="input-group mb-3">
-                        <input type="password" class="form-control" placeholder="Password">
-                        <div class="input-group-append">
-                            <div class="input-group-text">
-                                <span class="fas fa-lock"></span>
-                            </div>
+                </div>
+                <div class="input-group mb-3">
+                    <input type="password" class="form-control" placeholder="Password">
+                    <div class="input-group-append">
+                        <div class="input-group-text">
+                            <span class="fas fa-lock"></span>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-8">
-                            <div class="icheck-primary">
-                                <input type="checkbox" id="remember">
-                                <label for="remember">
-                                    Remember Me
-                                </label>
-                            </div>
+                </div>
+                <div class="row">
+                    <div class="col-8">
+                        <div class="icheck-primary">
+                            <input type="checkbox" id="remember">
+                            <label for="remember">
+                                Remember Me
+                            </label>
                         </div>
-                        <!-- /.col -->
-                        <div class="col-4">
-                            <button type="submit" class="btn btn-primary btn-block">Sign In</button>
-                        </div>
-                        <!-- /.col -->
                     </div>
-                </form>
+                    <!-- /.col -->
+                    <div class="col-4">
+                        <button id="login" class="btn btn-primary btn-block">Sign In</button>
+                    </div>
+                    <!-- /.col -->
+                </div>
 
                 <div class="social-auth-links text-center mb-3">
                     <p>- OR -</p>
@@ -90,9 +89,44 @@
     <!-- /.login-box -->
     <!-- jQuery -->
     <script src="~/Content/Plugins/jquery/jquery.min.js"></script>
+    <!-- Toasts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
     <!-- Bootstrap 4 -->
     <script src="~/Content/Plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- AdminLTE App -->
     <script src="~/Content/Scripts/adminlte.min.js"></script>
+
+    <script>
+        $('#login').click(function () {
+            let email = $('input[type="email"]').val();
+            let password = $('input[type="password"]').val();
+            if (email != '' && password != '') {
+                let data = { Email: email, Password: password };
+                $.ajax({
+                    url: '/Login/Index',
+                    type: 'POST',
+                    data: { model: data },
+                })
+                    .done(function (res) {
+                        if (res.Code == 200) {
+                            toastr.success('Đăng nhập thành công!', 'Welcome !!!');
+                            location.href = "/Admin/Dashboard";
+                        }
+                        else {
+                            toastr.error('Đăng nhập thất bại!', 'Lỗi !!!');
+                        }
+                    })
+                    .fail(function () {
+                        toastr.error('Đăng nhập thất bại!', 'Lỗi !!!');
+                    })
+                    .always(function () {
+                    });
+            }
+            else {
+                toastr.error('Bạn chưa nhập email hoặc mật khẩu!', 'Lỗi !!!');
+            }
+        });
+
+    </script>
 </body>
 </html>
