--- a/QLTV/Areas/Admin/Views/Login/Index.cshtml
+++ b/QLTV/Areas/Admin/Views/Login/Index.cshtml
@@ -110,7 +110,7 @@
                     .done(function (res) {
                         if (res.Code == 200) {
                             toastr.success('Đăng nhập thành công!', 'Welcome !!!');
-                            location.href = "/Admin/Dashboard";
+                            location.href = "/Admin/Admin/Dashboard";
                         }
                         else {
                             toastr.error('Đăng nhập thất bại!', 'Lỗi !!!');
