--- a/QLTV/Areas/Admin/Views/Admin/Dashboard.cshtml
+++ b/QLTV/Areas/Admin/Views/Admin/Dashboard.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "Dashboard";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
 <!-- Content Wrapper. Contains page content -->
