--- a/QLTV/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/QLTV/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -181,9 +181,9 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="../../index.html" class="nav-link">
-                                        <i class="far fa-circle nav-icon"></i>
-                                        <p>Dashboard v1</p>
+                                    <a href="@Url.Action("Index","Employee")" class="nav-link">
+                                        <i class="fa fa-user"></i>
+                                        <p>Admin</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
