--- a/QLTV/Areas/Admin/Views/Employee/Index.cshtml
+++ b/QLTV/Areas/Admin/Views/Employee/Index.cshtml
@@ -63,7 +63,6 @@
                         <div id="input-area" class="col-md-12 card card-primary">
                             <!-- /.card-header -->
                             <!-- form start -->
-                            <form role="form" action="/Admin/Employee/Add">
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group">
@@ -124,9 +123,8 @@
                                 <!-- /.card-body -->
 
                                 <div class="card-footer">
-                                    <button type="submit" class="btn btn-primary">Submit</button>
+                                    <button type="button" class="btn btn-primary" onclick="Add();">Submit</button>
                                 </div>
-                            </form>
                         </div>
                         <!-- /.card -->
                         <div id="table-engine" class="card-body table-responsive p-0">
