--- a/QLTV/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/QLTV/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="~/Content/Css/adminlte.min.css">
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css" rel="stylesheet" />
 </head>
 <body class="hold-transition sidebar-mini">
     <!-- Site wrapper -->
@@ -745,5 +746,8 @@
 
     <!-- PAGE SCRIPTS -->
     <script src="~/Content/Scripts/pages/dashboard2.js"></script>
+
+    <!-- Toasts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
 </body>
 </html>
