--- a/QLTV/Views/Shared/_Layout.cshtml
+++ b/QLTV/Views/Shared/_Layout.cshtml
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="~/Content/Css/adminlte.min.css">
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.css" rel="stylesheet" />
 </head>
 <body class="hold-transition sidebar-mini">
     <!-- Site wrapper -->
@@ -731,6 +732,7 @@
     <!-- overlayScrollbars -->
     <script src="~/Content/Plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
 
+
     <!-- OPTIONAL SCRIPTS -->
     <script src="~/Content/Scripts/demo.js"></script>
 
@@ -743,6 +745,8 @@
     <!-- ChartJS -->
     <script src="~/Content/Plugins/chart.js/Chart.min.js"></script>
 
+    <!-- Toasts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.4/toastr.min.js"></script>
     <!-- PAGE SCRIPTS -->
     <script src="~/Content/Scripts/pages/dashboard2.js"></script>
 </body>
