--- a/QLTV/Areas/Admin/Views/Employee/Index.cshtml
+++ b/QLTV/Areas/Admin/Views/Employee/Index.cshtml
@@ -68,6 +68,7 @@
                                     <div class="row">
                                         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group">
                                             <label for="Code">Mã</label>
+                                            <input type="text" class="form-control" id="Id" name="Id" hidden>
                                             <input type="text" class="form-control" id="Code" name="Code" placeholder="Mã">
                                         </div>
                                         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group">
@@ -190,6 +191,37 @@
             });
     }
 
+
+    function Update() {
+        let data = $('#employee-form').serialize();
+        console.log(data);
+        $.ajax({
+            url: '/Admin/Employee/Update',
+            type: 'POST',
+            dataType: 'json',
+            data: data,
+        })
+            .done(function (res) {
+                if (res.StatusCode == 200) {
+                    toastr.success('Cập nhật thành công!', 'Success !!!');
+                    // Refresh()
+                }
+                else {
+                    toastr.error(res.Message, 'Error !!!');
+                    // duyệt từng lỗi
+                    // item
+                    // JS Jquery $('input[name="'+item.name-error+'"]').
+                }
+            })
+            .fail(function () {
+                console.log("error");
+            })
+            .always(function () {
+                console.log("complete");
+            });
+    }
+
+
     function Delete(id) {
         Swal.fire({
             title: 'Are you sure?',
@@ -200,7 +232,31 @@
             confirmButtonText: 'Yes, delete it!'
         }).then((result) => {
             if (result.value) {
-                location.href = '/Admin/Employee/Delete/' + id;
+                let data = { employeeId: id };
+                $.ajax({
+                    url: '/Admin/Employee/Delete',
+                    type: 'POST',
+                    dataType: 'json',
+                    data: data,
+                })
+                    .done(function (res) {
+                        if (res.StatusCode == 200) {
+                            toastr.success('Xóa thành công!', 'Success !!!');
+                            // Refresh()
+                        }
+                        else {
+                            toastr.error(res.Message, 'Error !!!');
+                            // duyệt từng lỗi
+                            // item
+                            // JS Jquery $('input[name="'+item.name-error+'"]').
+                        }
+                    })
+                    .fail(function () {
+                        console.log("error");
+                    })
+                    .always(function () {
+                        console.log("complete");
+                    });
             }
         })
     }
