--- a/QLTV/Views/Home/Index.cshtml
+++ b/QLTV/Views/Home/Index.cshtml
@@ -29,3 +29,68 @@
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
+
+<table>
+    <thead>
+        <tr>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td></td>
+        </tr>
+    </tbody>
+</table>
+
+
+<header></header>
+<section>
+    <div>
+
+    </div>
+    <div>
+
+    </div>
+</section>
+<section>
+    <div>
+
+    </div>
+    <div>
+
+    </div>
+</section>
+<section>
+    <div>
+
+    </div>
+</section>
+<footer>
+    <div data-id="001"><p>Dev <span>Master</span></p></div>
+    <div data-id="002"><p>Dev <span>Master</span></p></div>
+    <div data-id="003"><p>Dev <span>Master</span></p></div>
+    <div data-id="3"><p>Dev <span>Master</span></p></div>
+    <div data-id="1"><p>Dev <span>Master</span></p></div>
+    <div data-id="2"><p>Dev <span>Master</span></p></div>
+    <div data-id="3"><p>Dev <span>Master</span></p></div>
+    <div data-url="http"><p>Dev <span>Master</span></p></div>
+    <div><p>Dev <span>Master</span></p></div>
+</footer>
+<style>
+    div[data-id="0"] {
+        width: calc(100%/3);
+    }
+
+    div[data-id] {
+    }
+
+    div[data-id^="00"] {
+    }
+    /*like '%00%'*/
+    div[data-id$="00"] {
+    }
+
+    div[data-id*="00"] {
+    }
+</style>
