--- a/QLTV/Areas/Admin/Views/Publishers/Create.cshtml
+++ b/QLTV/Areas/Admin/Views/Publishers/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model QLTV.Models.Publisher
+﻿@model QLTV.Models.Entity.Publisher
 
 @{
     ViewBag.Title = "Create";
@@ -36,6 +36,6 @@
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@section Scripts {
+@*@section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
-}
+}*@
